// KorawitCinema — Database Schema (DBML)
// เวอร์ชันนี้ตัดฟิลด์/ตารางที่ไม่ได้ใช้จริงใน src/lib/types.ts และ mock-data.ts ออกแล้ว
// (ไม่มี movie_genres และ user_points_log เพราะโค้ดจริงไม่ได้ทำสองตารางนี้ — ดู DATABASE_SCHEMA.md)
// นำไปวางที่ https://dbdiagram.io ได้เลย
// Docs: https://dbml.dbdiagram.io/docs

//////////////////////////////////////////
// ENUMS
//////////////////////////////////////////

Enum user_role {
  customer
  staff
  admin
}

Enum booking_status {
  pending_payment
  confirmed
  cancelled
  expired
}

Enum seat_hold_status {
  held
  booked
  released
}

//////////////////////////////////////////
// 1. USERS & MEMBERSHIP
//////////////////////////////////////////

Table users {
  user_id         integer   [pk, increment]
  full_name       varchar
  email           varchar   [unique, not null]
  phone           varchar   [unique]
  role            user_role [not null, default: 'customer']
  member_tier     varchar   [default: 'basic', note: 'basic / silver / gold']
  points_balance  integer   [not null, default: 0]
  created_at      timestamp [not null, default: `now()`]

  note: 'ขาด password_hash / is_active / updated_at เมื่อเทียบกับดีไซน์ต้นฉบับ — auth ตอนนี้เป็น mock ยังไม่ได้ต่อ Supabase Auth จริง'
}

//////////////////////////////////////////
// 2. CINEMA STRUCTURE
//////////////////////////////////////////

Table cinemas {
  cinema_id       integer   [pk, increment]
  name            varchar   [not null, note: 'เช่น "KorawitCinema สาขาเซ็นทรัลเวิลด์"']
  address         text
  city            varchar

  note: 'ขาด lat / lng / phone / is_active เมื่อเทียบกับดีไซน์ต้นฉบับ'
}

Table halls {
  hall_id         integer   [pk, increment]
  cinema_id       integer   [not null]
  name            varchar   [not null, note: '"โรง 1", "IMAX Hall"']
  screen_type     varchar   [default: 'standard', note: 'standard / imax / 4dx / dolby']
  total_rows      integer   [not null]
  total_columns   integer   [not null]

  indexes {
    (cinema_id, name) [unique]
  }
}

Table seat_types {
  seat_type_id     integer [pk, increment]
  code             varchar [unique, not null, note: 'STANDARD / VIP / COUPLE — ตัด RECLINER ออก ไม่ได้ใช้จริง']
  label            varchar [not null]
  price_multiplier decimal [not null, default: 1.00, note: 'ตัวคูณฐาน (default เผื่อ showtime ไม่กำหนดราคาเอง)']
}

Table seats {
  seat_id         integer [pk, increment]
  hall_id         integer [not null]
  seat_row        varchar [not null, note: 'A, B, C ...']
  seat_column     integer [not null]
  seat_type_id    integer [not null]
  is_active       boolean [not null, default: true, note: 'false = ที่นั่งชำรุด/ปิดใช้งาน']

  indexes {
    (hall_id, seat_row, seat_column) [unique]
    hall_id
  }
}

//////////////////////////////////////////
// 3. MOVIE CATALOG
//////////////////////////////////////////

Table movies {
  movie_id        integer   [pk, increment]
  title           varchar   [not null]
  title_local     varchar   [note: 'ชื่อไทย']
  duration_min    integer   [not null]
  synopsis        text
  genre_ids       varchar   [note: 'เก็บเป็น array อ้างอิง genres.genre_id ตรงๆ ในตัว movie แทนการทำ junction table']
  age_rating      varchar   [note: 'G, PG, PG-13, 18+']
  release_date    date
  status          varchar   [default: 'now_showing', note: 'now_showing / coming_soon / ended']

  note: 'ขาด poster_url / trailer_url / created_at — หน้าเว็บใช้ gradient สีแทนโปสเตอร์จริง, ไม่มี movie_genres junction table'
}

Table genres {
  genre_id        integer [pk, increment]
  name            varchar [unique, not null]
}

//////////////////////////////////////////
// 4. SHOWTIME & PRICING
//////////////////////////////////////////

Table showtimes {
  showtime_id     integer   [pk, increment]
  movie_id        integer   [not null]
  hall_id         integer   [not null]
  cinema_id       integer   [not null, note: 'เพิ่มมาเอง ไม่มีในดีไซน์ต้นฉบับ (ของจริงควร derive ผ่าน hall_id -> cinemas) แต่โค้ดปัจจุบัน denormalize ใส่ตรงๆ เพื่อ query ง่ายฝั่ง mock']
  language_audio  varchar   [default: 'original', note: 'original / dubbed_thai']
  subtitle        varchar   [note: 'thai / english / none']
  start_time      timestamp [not null]
  end_time        timestamp [not null, note: 'CHECK: end_time > start_time']
  base_price      decimal   [not null, note: 'ราคาฐานของรอบนี้ (ที่นั่ง standard)']
  status          varchar   [default: 'open', note: 'open / soldout / cancelled']

  indexes {
    (movie_id, start_time)
    (hall_id, start_time)
  }
}

Table showtime_pricing {
  showtime_id     integer [not null]
  seat_type_id    integer [not null]
  price           decimal [not null]

  indexes {
    (showtime_id, seat_type_id) [pk]
  }
}

//////////////////////////////////////////
// 5. BOOKING & PAYMENT
//////////////////////////////////////////

Table promotions {
  promotion_id    integer   [pk, increment]
  code            varchar   [unique, not null]
  description     text
  discount_type   varchar   [not null, note: 'percent / fixed_amount']
  discount_value  decimal   [not null]
  is_active       boolean   [not null, default: true]

  note: 'ขาด valid_from / valid_to / usage_limit — โค้ดตอนนี้เช็คแค่ is_active ไม่มีวันหมดอายุ/จำกัดจำนวนใช้จริง'
}

Table bookings {
  booking_id      integer         [pk, increment]
  user_id         integer         [not null]
  showtime_id     integer         [not null]
  booking_code    varchar         [unique, not null, note: 'โค้ดอ้างอิงลูกค้า เช่น "KC7X9A2Q"']
  status          booking_status  [not null, default: 'pending_payment']
  total_amount    decimal         [not null]
  discount_amount decimal         [not null, default: 0]
  promotion_id    integer
  created_at      timestamp       [not null, default: `now()`]
  expires_at      timestamp       [not null, note: 'created_at + 10 นาที — เช็ค/ปล่อยคืนที่นั่งด้วย client-side sweep ไม่ใช่ cron job จริง']
}

Table booking_seats {
  booking_seat_id integer           [pk, increment]
  booking_id      integer           [not null]
  showtime_id     integer           [not null]
  seat_id         integer           [not null]
  price           decimal           [not null, note: 'snapshot ราคา ณ ตอนจอง']
  status          seat_hold_status  [not null, default: 'held']
  held_at         timestamp         [not null, default: `now()`]

  indexes {
    (showtime_id, seat_id) [unique, note: 'Partial index: WHERE status IN (held, booked) — กันจองที่นั่งซ้อน (ตอนนี้บังคับด้วย JS logic ฝั่ง client ไม่ใช่ DB constraint จริง)']
    booking_id
  }
}

Table payments {
  payment_id      integer   [pk, increment]
  booking_id      integer   [unique, not null]
  method          varchar   [not null, note: 'credit_card / promptpay / true_money / line_pay']
  amount          decimal   [not null]
  provider_ref    varchar   [note: 'transaction id จาก payment gateway']
  paid_at         timestamp
  status          varchar   [default: 'pending', note: 'pending / success / failed / refunded']
}

//////////////////////////////////////////
// 6. ADD-ONS
//////////////////////////////////////////

Table addons {
  addon_id        integer [pk, increment]
  name            varchar [not null, note: 'ป็อปคอร์นถังใหญ่ + โค้ก 2 แก้ว']
  price           decimal [not null]

  note: 'ขาด is_active เมื่อเทียบกับดีไซน์ต้นฉบับ'
}

Table booking_addons {
  booking_id      integer [not null]
  addon_id        integer [not null]
  quantity        integer [not null, default: 1]
  price_each      decimal [not null]

  indexes {
    (booking_id, addon_id) [pk]
  }
}

//////////////////////////////////////////
// RELATIONSHIPS
//////////////////////////////////////////

Ref: halls.cinema_id > cinemas.cinema_id
Ref: seats.hall_id > halls.hall_id
Ref: seats.seat_type_id > seat_types.seat_type_id

Ref: showtimes.movie_id > movies.movie_id
Ref: showtimes.hall_id > halls.hall_id
Ref: showtimes.cinema_id > cinemas.cinema_id

Ref: showtime_pricing.showtime_id > showtimes.showtime_id
Ref: showtime_pricing.seat_type_id > seat_types.seat_type_id

Ref: bookings.user_id > users.user_id
Ref: bookings.showtime_id > showtimes.showtime_id
Ref: bookings.promotion_id > promotions.promotion_id

Ref: booking_seats.booking_id > bookings.booking_id
Ref: booking_seats.showtime_id > showtimes.showtime_id
Ref: booking_seats.seat_id > seats.seat_id

Ref: payments.booking_id - bookings.booking_id

Ref: booking_addons.booking_id > bookings.booking_id
Ref: booking_addons.addon_id > addons.addon_id
